--- a/apps/mrc-tuto/package.json
+++ b/apps/mrc-tuto/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@mapbox/point-geometry": "^0.1.0",
     "@types/geojson": "^7946.0.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
