--- a/packages/maplibre-theme/package.json
+++ b/packages/maplibre-theme/package.json
@@ -27,11 +27,13 @@
     "cssnano": "^7.0.2",
     "extract-zip": "^2.0.1",
     "form-data": "^4.0.0",
+    "open": "^10.1.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
     "postcss-inline-base64": "^7.3.1",
     "postcss-inline-svg": "^6.0.0",
+    "postcss-prefix-selector": "^1.16.1",
     "prompts": "^2.4.2",
     "rimraf": "^5.0.7",
     "tsup": "^8.1.0"
