--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,8 @@ packages:
   - "apps/*"
   - "packages/pentatrion-design"
   - "packages/maplibre-react-components"
-  - "packages/maplibre-theme"
+  - "packages/maplibre-theme/dist"
+  - "packages/maplibre-theme/demo"
   - "packages/pentatrion-fonts"
   - "packages/pentatrion-geo"
   - "extra/swagger"
