--- a/apps/mrc-doc/package.json
+++ b/apps/mrc-doc/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "maplibre-gl": "^4.4.0",
     "maplibre-react-components": "workspace:^",
+    "maplibre-theme": "workspace:^",
     "next": "14.2.3",
     "nprogress": "^0.2.0",
     "pentatrion-design": "workspace:^",
@@ -36,11 +37,16 @@
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
     "prettier-plugin-tailwindcss": "^0.6.4",
+    "rehype-external-links": "^3.0.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "shiki": "^1.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
+    "unified": "^11.0.4",
     "usehooks-ts": "^3.1.0"
   }
 }
