--- a/apps/mrc-doc/package.json
+++ b/apps/mrc-doc/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "postcss-input-range": "^5.0.0",
     "postcss-load-config": "^5.1.0",
     "prettier-plugin-tailwindcss": "^0.6.4",
     "rehype-external-links": "^3.0.0",
