--- a/packages/pentatrion-design/tsconfig.json
+++ b/packages/pentatrion-design/tsconfig.json
@@ -1,11 +1,42 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "declaration": true,
+    /**
+     * Base
+     */
+
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
     "skipLibCheck": true,
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+
+    /**
+     * Package specific
+     */
+    "declaration": true,
     "types": ["react/experimental", "@testing-library/jest-dom"],
     "baseUrl": "."
   },
   "exclude": ["**/node_modules", "./dist"],
-  "include": ["components", "hooks", "lib", "redux", "styles", "*.ts", ".storybook"]
+  "include": [
+    "components",
+    "hooks",
+    "lib",
+    "redux",
+    "styles",
+    "*.ts",
+    ".storybook"
+  ]
 }
