front share search feature

--- a/apps/front/src/style/fontello/config.json
+++ b/apps/front/src/style/fontello/config.json
@@ -865,6 +865,12 @@
       "src": "iconic"
     },
     {
+      "uid": "91426c82d94428a33353e495418435e3",
+      "css": "share",
+      "code": 59460,
+      "src": "entypo"
+    },
+    {
       "uid": "24b7643d8401ffb5bd0872b14261d9ee",
       "css": "climbing-outdoor",
       "code": 59402,
