--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -27,8 +27,9 @@
     "immutable": "5.0.0-beta.5",
     "maplibre-gl": "^4.4.0",
     "maplibre-react-components": "^0.0.7",
+    "maplibre-theme": "^0.0.14",
     "nanoid": "^5.0.7",
-    "pentatrion-design": "^0.0.13",
+    "pentatrion-design": "^0.0.16",
     "pentatrion-geo": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -37,6 +38,8 @@
     "talkr": "^3.4.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^15.0.7",
     "@types/d3-array": "^3.2.1",
     "@types/d3-scale": "^4.0.8",
     "@types/d3-shape": "^3.1.6",
@@ -45,6 +48,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "jsdom": "^24.1.0",
     "pentatrion-fontello-cli": "^0.0.5",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
@@ -52,6 +56,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "unplugin-inject-preload": "^2.0.4",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vitest": "^1.6.0"
   }
 }
