--- a/apps/pentatrion-geo/package.json
+++ b/apps/pentatrion-geo/package.json
@@ -4,7 +4,8 @@
   "description": "Extra tools and MapLibre components for geo",
   "author": "Hugues Tavernier",
   "license": "ISC",
-  "main": "./index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
@@ -16,48 +17,50 @@
   "type": "module",
   "devDependencies": {
     "@babel/core": "^7.24.7",
-    "@floating-ui/react-dom": "^2.1.0",
-    "@storybook/addon-actions": "^8.1.9",
-    "@storybook/addon-docs": "^8.1.9",
-    "@storybook/addon-essentials": "^8.1.9",
-    "@storybook/addon-interactions": "^8.1.9",
-    "@storybook/addon-links": "^8.1.9",
-    "@storybook/addon-themes": "^8.1.9",
-    "@storybook/blocks": "^8.1.9",
-    "@storybook/manager-api": "^8.1.9",
-    "@storybook/react": "^8.1.9",
-    "@storybook/react-vite": "^8.1.9",
-    "@storybook/test": "^8.1.9",
-    "@storybook/theming": "^8.1.9",
-    "@storybook/types": "^8.1.9",
+    "@floating-ui/react-dom": "^2.1.1",
+    "@storybook/addon-actions": "^8.1.11",
+    "@storybook/addon-docs": "^8.1.11",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-themes": "^8.1.11",
+    "@storybook/blocks": "^8.1.11",
+    "@storybook/manager-api": "^8.1.11",
+    "@storybook/react": "^8.1.11",
+    "@storybook/react-vite": "^8.1.11",
+    "@storybook/test": "^8.1.11",
+    "@storybook/theming": "^8.1.11",
+    "@storybook/types": "^8.1.11",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^15.0.7",
     "@types/geojson": "^7946.0.14",
-    "@types/google.maps": "^3.55.9",
+    "@types/google.maps": "^3.55.11",
     "@types/mapbox__point-geometry": "^0.1.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "jsdom": "^24.1.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "postcss-load-config": "^5.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.4",
-    "storybook": "^8.1.9",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "storybook": "^8.1.11",
     "tailwindcss": "^3.4.4",
     "tsup": "^8.1.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.3",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.6.5",
-    "@floating-ui/react": "^0.26.17",
+    "@floating-ui/dom": "^1.6.7",
+    "@floating-ui/react": "^0.26.19",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@mapbox/point-geometry": "^0.1.0",
+    "@turf/distance": "^7.0.0",
+    "@turf/helpers": "^7.0.0",
     "clsx": "^2.1.1",
     "fuse.js": "^7.0.0",
-    "maplibre-gl": "^4.4.0",
+    "maplibre-gl": "^4.5.0",
     "maplibre-react-components": "^0.0.7",
     "nanoid": "^5.0.7",
-    "pentatrion-design": "^0.0.20",
+    "pentatrion-design": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-sortablejs": "^6.1.4"
