--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -12,23 +12,23 @@
     "fontello": "fontello"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.26.17",
+    "@floating-ui/react": "^0.26.19",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@react-spring/web": "^9.7.3",
-    "@reduxjs/toolkit": "^2.2.5",
-    "@turf/boolean-contains": "^6.5.0",
-    "@turf/helpers": "^6.5.0",
-    "@turf/turf": "6.5.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@turf/boolean-contains": "^7.0.0",
+    "@turf/distance": "^7.0.0",
+    "@turf/helpers": "^7.0.0",
     "clsx": "^2.1.1",
     "d3-array": "^3.2.4",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
     "geojson": "^0.5.0",
     "immutable": "5.0.0-beta.5",
-    "maplibre-gl": "^4.4.0",
+    "maplibre-gl": "^4.5.0",
     "maplibre-react-components": "^0.0.7",
     "nanoid": "^5.0.7",
-    "pentatrion-design": "^0.0.20",
+    "pentatrion-design": "^0.1.0",
     "pentatrion-geo": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -43,19 +43,19 @@
     "@types/d3-scale": "^4.0.8",
     "@types/d3-shape": "^3.1.6",
     "@types/geojson": "^7946.0.14",
-    "@types/google.maps": "^3.55.9",
+    "@types/google.maps": "^3.55.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "jsdom": "^24.1.0",
     "pentatrion-fontello-cli": "^0.0.5",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "postcss-load-config": "^5.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.4",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.3",
     "unplugin-inject-preload": "^2.0.4",
-    "vite": "^5.3.1",
+    "vite": "^5.3.2",
     "vitest": "^1.6.0"
   }
 }
