--- a/apps/pentatrion-geo/package.json
+++ b/apps/pentatrion-geo/package.json
@@ -55,6 +55,7 @@
     "@mapbox/point-geometry": "^0.1.0",
     "@turf/distance": "^7.0.0",
     "@turf/helpers": "^7.0.0",
+    "@turf/nearest-point-on-line": "^7.0.0",
     "clsx": "^2.1.1",
     "fuse.js": "^7.0.0",
     "maplibre-gl": "^4.5.0",
