front elevation profil basic implementation

--- a/apps/front/src/style/fontello/config.json
+++ b/apps/front/src/style/fontello/config.json
@@ -899,6 +899,12 @@
       ]
     },
     {
+      "uid": "d5f287ad8e3a2db8f808bc09980ec3dc",
+      "css": "chart",
+      "code": 59463,
+      "src": "typicons"
+    },
+    {
       "uid": "24b7643d8401ffb5bd0872b14261d9ee",
       "css": "climbing-outdoor",
       "code": 59402,
