--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "types": ["react/experimental", "google.maps"],
+    "types": ["google.maps"],
     "paths": {
       "~/*": ["./src/*"]
     }
