--- a/apps/front/.env
+++ b/apps/front/.env
@@ -3,6 +3,7 @@ VITE_MAPTILER_TOKEN=
 VITE_GOOGLE_MAPS_API_TOKEN=
 VITE_OPENROUTESERVICE_TOKEN=
 
+VITE_OVERPASS_URL="https://z.overpass-api.de"
 VITE_OPENROUTESERVICE_URL="https://api.openrouteservice.org"
 VITE_SEARCH_DEBOUNCE_DELAY=300
 VITE_DEBUG=0
