--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -19,7 +19,10 @@
     "@turf/boolean-contains": "^7.0.0",
     "@turf/distance": "^7.0.0",
     "@turf/helpers": "^7.0.0",
+    "@turf/nearest-point-on-line": "^7.0.0",
+    "@types/node": "^20.12.4",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "d3-array": "^3.2.4",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
@@ -27,12 +30,12 @@
     "immutable": "5.0.0-beta.5",
     "maplibre-gl": "^4.5.0",
     "nanoid": "^5.0.7",
-    "pentatrion-design": "^0.1.0",
     "pentatrion-geo": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-sortablejs": "^6.1.4",
+    "simplify-js": "^1.2.4",
     "talkr": "^3.4.0"
   },
   "devDependencies": {
@@ -54,7 +57,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
     "unplugin-inject-preload": "^2.0.4",
-    "vite": "^5.3.2",
+    "vite": "^5.3.3",
     "vitest": "^1.6.0"
   }
 }
