--- a/apps/pentatrion-geo/package.json
+++ b/apps/pentatrion-geo/package.json
@@ -33,6 +33,7 @@
     "@storybook/types": "^8.1.11",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@types/d3": "^7.4.3",
     "@types/geojson": "^7946.0.14",
     "@types/google.maps": "^3.55.11",
     "@types/mapbox__point-geometry": "^0.1.4",
@@ -57,13 +58,14 @@
     "@turf/helpers": "^7.0.0",
     "@turf/nearest-point-on-line": "^7.0.0",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "fuse.js": "^7.0.0",
     "maplibre-gl": "^4.5.0",
     "nanoid": "^5.0.7",
-    "pentatrion-design": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-sortablejs": "^6.1.4"
+    "react-sortablejs": "^6.1.4",
+    "simplify-js": "^1.2.4"
   },
   "peerDependencies": {
     "tailwindcss": "*"
