route elevation performances enhancements, pois more accurate

--- a/apps/pentatrion-geo/package.json
+++ b/apps/pentatrion-geo/package.json
@@ -54,8 +54,10 @@
     "@floating-ui/react": "^0.26.19",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@mapbox/point-geometry": "^0.1.0",
+    "@turf/along": "^7.0.0",
     "@turf/distance": "^7.0.0",
     "@turf/helpers": "^7.0.0",
+    "@turf/length": "^7.0.0",
     "@turf/nearest-point-on-line": "^7.0.0",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
