--- a/apps/pentatrion-geo/tsconfig.json
+++ b/apps/pentatrion-geo/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "skipLibCheck": true,
-    "types": ["google.maps"],
-    "baseUrl": "."
+    "types": ["google.maps"]
   },
   "exclude": ["**/node_modules", "dist"],
   "include": [
