--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-    "name": "root",
-    "private": true,
-    "description": "",
-    "scripts": {
-        "swagger": "pnpm run --filter @lonlat/swagger swagger"
-    },
-    "keywords": [],
-    "author": "Hugues Tavernier",
-    "license": "ISC",
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^7.15.0",
-        "@typescript-eslint/parser": "^7.15.0",
-        "eslint": "^8.57.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-react-refresh": "^0.4.7",
-        "prettier": "^3.3.2"
-    },
-    "volta": {
-        "node": "20.14.0"
-    },
-    "dependencies": {
-        "maplibre-react-components": "^0.1.2",
-        "pentatrion-design": "^0.1.1"
-    }
+  "name": "root",
+  "private": true,
+  "description": "",
+  "scripts": {
+    "dev:front": "cd apps/front && pnpm run dev",
+    "dev:pentatrion-geo": "cd apps/pentatrion-geo && pnpm run dev",
+    "dev": "run-p dev:*",
+    "swagger": "pnpm run --filter @lonlat/swagger swagger"
+  },
+  "keywords": [],
+  "author": "Hugues Tavernier",
+  "license": "ISC",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.2"
+  },
+  "volta": {
+    "node": "20.14.0"
+  },
+  "dependencies": {
+    "maplibre-react-components": "^0.1.3",
+    "pentatrion-design": "^0.1.1"
+  }
 }
