fix pentatrion-geo dependency

--- a/apps/pentatrion-geo/package.json
+++ b/apps/pentatrion-geo/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "pentatrion-geo",
+  "name": "pentatrion-geo-private",
+  "private": true,
   "version": "0.0.1",
   "description": "Extra tools and MapLibre components for geo",
   "author": "Hugues Tavernier",
@@ -7,8 +8,16 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup",
+    "dev:tsup": "tsup --watch",
+    "build:tsup": "tsup",
+    "dev:tsc": "tsc -w -p tsconfig.build.json",
+    "dev:package": "tsc-alias -w -p tsconfig.build.json",
+    "dev": "run-p dev:tsc dev:package",
+    "build:tsc": "tsc -p tsconfig.build.json",
+    "build:alias": "tsc-alias -p tsconfig.build.json",
+    "build:css": "postcss -o dist/style.css style.css",
+    "build:package": "node generate-public-package.js",
+    "build": "run-s build:tsc build:alias build:css build:package",
     "tsc": "tsc",
     "test": "vitest",
     "storybook": "storybook dev -p 6008",
@@ -40,11 +49,15 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "jsdom": "^24.1.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.39",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
     "postcss-load-config": "^6.0.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "storybook": "^8.1.11",
     "tailwindcss": "^3.4.4",
+    "tsc-alias": "^1.8.10",
     "tsup": "^8.1.0",
     "typescript": "^5.5.3",
     "vitest": "^1.6.0"
