--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -34,6 +34,7 @@
     "d3-shape": "^3.2.0",
     "geojson": "^0.5.0",
     "immutable": "5.0.0-beta.5",
+    "lodash.debounce": "^4.0.8",
     "maplibre-gl": "^4.5.0",
     "nanoid": "^5.0.7",
     "pentatrion-geo": "workspace:*",
@@ -52,6 +53,7 @@
     "@types/d3-shape": "^3.1.6",
     "@types/geojson": "^7946.0.14",
     "@types/google.maps": "^3.55.11",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
