--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -17,6 +17,7 @@
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.6",
     "@turf/turf": "7.0.0",
+    "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
     "d3-array": "^3.2.4",
     "d3-scale": "^4.0.2",
