--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -23,6 +23,7 @@
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
     "immutable": "5.0.0-beta.5",
+    "lil-gui": "^0.19.2",
     "maplibre-gl": "^4.5.0",
     "maplibre-theme": "^0.1.0",
     "nanoid": "^5.0.7",
@@ -51,6 +52,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
-    "vite": "^5.3.2"
+    "vite": "^5.3.2",
+    "vite-plugin-glsl": "^1.3.0"
   }
 }
