--- a/.github/workflows/deploy-lonlat.yml
+++ b/.github/workflows/deploy-lonlat.yml
@@ -36,6 +36,10 @@ jobs:
         run: "pnpm i --frozen-lockfile"
 
       - name: Build pentatrion-geo and front
+        env:
+          VITE_MAPTILER_TOKEN: ${{ secrets.VITE_MAPTILER_TOKEN }}
+          VITE_GOOGLE_MAPS_API_TOKEN: ${{ secrets.VITE_GOOGLE_MAPS_API_TOKEN }}
+          VITE_OPENROUTESERVICE_TOKEN: ${{ secrets.VITE_OPENROUTESERVICE_TOKEN }}
         run: pnpm run build
 
       - name: Upload artifact
